kubernetes/kubewatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: kubewatch
  labels:
    app: kubewatch
    component: exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubewatch
      component: exporter
  template:
    metadata:
      labels:
        app: kubewatch
        component: exporter
    spec:
      serviceAccountName: kubewatch
      containers:
        - name: kubewatch
          image: bitnami/kubewatch:0.0.4
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 384Mi
          volumeMounts:
            - name: config
              mountPath: /opt/bitnami/kubewatch/.kubewatch.yaml
              subPath: .kubewatch.yaml
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: kubewatch
