kubernetes/monitoring-kubewatch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubewatch
  labels:
    app: kubewatch
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kubewatch
  name: kubewatch
  labels:
    app: kubewatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubewatch
  template:
    metadata:
      labels:
        app: kubewatch
    spec:
      serviceAccountName: kubewatch
      containers:
        - name: kubewatch
          image: bitnami/kubewatch:0.0.4
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 384Mi
          volumeMounts:
            - name: config
              subPath: .kubewatch.yaml
              mountPath: /opt/bitnami/kubewatch/.kubewatch.yaml
      volumes:
        - name: config
          configMap:
            name: config
---
