kubernetes/prometheus-adapter.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prometheus
  name: adapter
  labels:
    app: prometheus
    component: adapter
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: prometheus
    component: adapter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prometheus
  name: adapter
  labels:
    app: prometheus
    component: adapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
      component: adapter
  template:
    metadata:
      labels:
        app: prometheus
        component: adapter
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
      serviceAccountName: prometheus
      containers:
        - name: adapter
          image: directxman12/k8s-prometheus-adapter-amd64:v0.4.1
          args:
            - /adapter
            - --secure-port=6443
            - --cert-dir=/tmp/cert
            - --logtostderr=true
            - --prometheus-url=http://server.prometheus.svc:9090
            - --metrics-relist-interval=1m
            - --v=4
            - --config=/etc/adapter/config.yaml
          ports:
            - containerPort: 6443
              name: https
          livenessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: https
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: https
            initialDelaySeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/adapter/
              name: config
              readOnly: true
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: config
          configMap:
            name: adapter
        - name: tmp
          emptyDir: {}
---
