kubernetes/prometheus-pushgateway.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prometheus
  name: pushgateway
  labels:
    app: prometheus
    component: pushgateway
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    app: prometheus
    component: pushgateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prometheus
  name: pushgateway
  labels:
    app: prometheus
    component: pushgateway
spec:
  selector:
    matchLabels:
      app: prometheus
      component: pushgateway
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
        component: pushgateway
    spec:
      serviceAccountName: prometheus
      containers:
        - name: pushgateway
          image: prom/pushgateway:v0.6.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
          readinessProbe:
            httpGet:
              path: "/#/status"
              port: 9091
            initialDelaySeconds: 10
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 200m
              memory: 32Mi
          volumeMounts:
            - name: storage-volume
              mountPath: /data
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: pushgateway
