kubernetes/prometheus-server.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prometheus
  name: server
  labels:
    app: prometheus
    component: server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
    component: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prometheus
  name: server
  labels:
    app: prometheus
    component: server
spec:
  selector:
    matchLabels:
      app: prometheus
      component: server
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
        component: server
    spec:
      serviceAccountName: prometheus
      containers:
        - name: configmap-reload
          image: jimmidyson/configmap-reload:v0.2.2
          imagePullPolicy: IfNotPresent
          args:
            - --volume-dir=/etc/config
            - --webhook-url=http://127.0.0.1:9090/-/reload
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 32Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
              readOnly: true
        - name: server
          image: prom/prometheus:v2.7.1
          imagePullPolicy: IfNotPresent
          args:
            - --config.file=/etc/config/prometheus.yml
            - --storage.tsdb.retention=12h
            - --storage.tsdb.path=/data
            - --web.console.libraries=/etc/prometheus/console_libraries
            - --web.console.templates=/etc/prometheus/consoles
            - --web.enable-lifecycle
            - --web.enable-admin-api
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
              readOnly: true
            - name: storage-volume
              mountPath: /data
      terminationGracePeriodSeconds: 300
      volumes:
        - name: config-volume
          configMap:
            name: server
        - name: storage-volume
          persistentVolumeClaim:
            claimName: server
