kubernetes/grafana.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
---
apiVersion: v1
kind: Service
metadata:
  namespace: grafana
  name: grafana
  labels:
    app: grafana
    component: server
  annotations:
    prometheus.io/port: "3000"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: grafana
  selector:
    app: grafana
    component: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: grafana
  name: server
  labels:
    app: grafana
    component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
      component: server
  template:
    metadata:
      labels:
        app: grafana
        component: server
    spec:
      serviceAccountName: grafana
      containers:
        - name: db
          image: mariadb
          ports:
            - name: mariadb
              containerPort: 3306
          resources:
            requests:
              cpu: 100m
              memory: 16Mi
            limits:
              cpu: 250m
              memory: 128Mi
          volumeMounts:
            - name: mariadb
              mountPath: /var/lib/mysql
              readOnly: false
        - name: server
          image: grafana/grafana:6.0.0
          ports:
            - name: service
              containerPort: 80
              protocol: TCP
            - name: grafana
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
              readOnly: true
            - name: config
              mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
              subPath: datasources.yaml
              readOnly: true
            - name: config
              mountPath: /etc/grafana/provisioning/dashboards/dashboards-configmap-provisioner.yaml
              subPath: dashboards-configmap-provisioner.yaml
              readOnly: true
            - name: dashboards
              mountPath: /etc/grafana/dashboards
              readOnly: true
            - name: storage
              mountPath: /var/lib/grafana
              readOnly: false
      volumes:
        - name: config
          configMap:
            name: grafana
            optional: false
        - name: dashboards
          configMap:
            name: dashboards
            optional: false
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb
            readOnly: false
        - name: storage
          persistentVolumeClaim:
            claimName: grafana
            readOnly: false
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: grafana
  name: server
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/whitelist-source-range: "${WHITELISTED_CIDR}"
  labels:
    app: grafana
    component: server
spec:
  rules:
    - host: grafana.${GKE_CLUSTER_NAME}.kfirs.com
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: service
  tls:
    - hosts:
        - grafana.${GKE_CLUSTER_NAME}.kfirs.com
      secretName: grafana-crt
