kubernetes/prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    app: prometheus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: prometheus
  name: ingress
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/whitelist-source-range: "${WHITELISTED_CIDR}"
  labels:
    app: prometheus
    component: ingress
spec:
  rules:
    - host: alerts.prometheus.${GKE_CLUSTER_NAME}.kfirs.com
      http:
        paths:
          - backend:
              serviceName: alertmanager
              servicePort: http
    - host: prometheus.${GKE_CLUSTER_NAME}.kfirs.com
      http:
        paths:
          - backend:
              serviceName: server
              servicePort: http
  tls:
    - hosts:
        - alerts.prometheus.${GKE_CLUSTER_NAME}.kfirs.com
      secretName: alertmanager-crt
    - hosts:
        - prometheus.${GKE_CLUSTER_NAME}.kfirs.com
      secretName: server-crt
w
