kubernetes/traefik.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: traefik
  labels:
    app: traefik
---
kind: Service
apiVersion: v1
metadata:
  namespace: traefik
  name: server
  labels:
    app: traefik
    component: server
spec:
  type: LoadBalancer
  loadBalancerIP: "${GKE_CLUSTER_IP_ADDR}"
  externalTrafficPolicy: Local
  selector:
    app: traefik
    component: server
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
    - protocol: TCP
      name: https
      port: 443
      targetPort: https
---
apiVersion: v1
kind: Service
metadata:
  namespace: traefik
  name: admin
  labels:
    app: traefik
    component: server
spec:
  selector:
    app: traefik
    component: server
  ports:
    - name: admin
      port: 80
      targetPort: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traefik
  name: server
  labels:
    app: traefik
    component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
      component: server
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: traefik
        component: server
    spec:
      serviceAccountName: traefik
      containers:
        - name: server
          image: traefik:1.7.9
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: admin
              containerPort: 8080
          args:
            - --configfile=/config/traefik.toml
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: config
            optional: false
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: traefik
  name: admin
  annotations:
      traefik.ingress.kubernetes.io/whitelist-source-range: "${WHITELISTED_CIDR}"
  labels:
    app: traefik
    component: server
spec:
  rules:
    - host: traefik.${GKE_CLUSTER_NAME}.kfirs.com
      http:
        paths:
          - backend:
              serviceName: admin
              servicePort: admin
  tls:
    - hosts:
        - traefik.${GKE_CLUSTER_NAME}.kfirs.com
      secretName: admin-crt
---
# TODO: enable Traefik autoscaler
#apiVersion: autoscaling/v2beta1
#kind: HorizontalPodAutoscaler
#metadata:
#  namespace: traefik
#  name: server
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: server
#  minReplicas: 1
#  maxReplicas: 3
#  metrics:
#    - type: Pods
#      pods:
#        metricName: traefik_entrypoint_requests_per_second
#        targetAverageValue: 1k
